tests/typing/fail/array/create_arg_atomic_array_mismatch.act
contract A

constructor(int x)


contract B

constructor()

creates
  A a := new A([[1,2,3],[4,5]])
